# radio-map-estimation

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: code-review.instructions.md  python.instructions.md
configs/: build_scene.yaml  building_height.yaml  dataloader.yaml  normalize.yaml  osm_buildings.yaml  plateau.yaml  plateau_download.yaml  radiomap.yaml  scene.yaml  simulation.yaml  sionna.yaml  spectral_variance.yaml  split.yaml
configs/cities/: barcelona.yaml  berlin.yaml  hamburg.yaml  munich.yaml  newyork.yaml  paris.yaml  seattle.yaml  singapore.yaml  tokyo.yaml  toronto.yaml  wien.yaml
configs/data/: plateau.yaml  sionna.yaml  split.yaml
configs/exp/: gp.yaml  pathloss.yaml
configs/simulation/: berlin.yaml  newyork.yaml  paris.yaml  seattle.yaml  tokyo.yaml  wien.yaml
configs/tuning/: ffnn_model_search.yaml
docs/: EXP-20260714-ffnn_tuning.md  experiment_note_template.md
scripts/: analyze_spectral_variance.py  build_scene.py  build_split.py  demo.py  download_plateau.py  normalize_radiomap.py  rss_histogram.py  simulate.py  simulate_radiomap.py
scripts/data/: build_split.py  download_plateau.py  simulate.py
scripts/exp/: run_gp.py  run_pathloss.py
scripts/sim_data/: fetch_buildings.py  generate_radiomap.py
scripts/tuning/: analyze_ffnn_pathloss.py  ffnn_pathloss.py
src/lab_template_python/: __init__.py
src/radio_map_estimation/: schema.py
src/radio_map_estimation/generater/: osm_buildings.py  radiomap.py
src/radio_map_estimation/graph/: distance.py  los.py  spectral.py  variogram.py
src/radio_map_estimation/loader/: dataset.py  loader.py  sampler.py  tensors.py
src/radio_map_estimation/osm/: building_mask.py  mesh_builder.py  osm.py  osm_schema.py  scene_writer.py
src/radio_map_estimation/pathloss/: base.py  ffnn.py  ffnn_los.py
src/radio_map_estimation/plateau/: bldg_parser.py  dem_parser.py  gdf_builder.py  gml_utils.py  io.py  luse_parser.py  tran_parser.py
src/radio_map_estimation/scene/: areaspec_builder.py  bldg_extruder.py  building_completion.py  mesh_builder.py  mesh_utils.py  mitsuba_xml.py  osm_buildings.py  parquet_loader.py  radiomap_solver.py  scene_preview.py  schema.py
src/radio_map_estimation/shadowing/: base.py  gp.py
src/radio_map_estimation/simulate/: observation_noise.py  obsevation_noise.py  radiomap_solver.py  rss_map.py  schema.py  tx_placement.py  visualize.py  visualize_sionna.py
src/radio_map_estimation/simulater/: normalize.py  osm_buildings.py  radiomap.py
src/radio_map_estimation/sionna/: bldg_mask.py  incoherent_patch.py  radiomap.py  save_radiomap.py  tx_placement.py  visualize.py
tests/: test_normalize.py  test_osm_buildings.py  test_radiomap.py
tests/kernel/: test_gudmundson.py
tests/pathloss/: test_base.py  test_ffnn_models.py
tests/scene/: test_building_completion.py  test_mesh_builder.py  test_osm_buildings.py  test_radiomap_solver.py  test_scene_writer.py
tests/shadowing/: test_gp.py
tests/simulate/: test_observation_noise.py  test_tx_placement.py  test_visualize.py  test_visualize_sionna.py
(+13 files in other folders)
