[project]
name = "radio-map-estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hidekazu Ishii", email = "s235937r@st.go.tuat.ac.jp" }
]
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.10.9",
  "numpy>=2.4.4",
  "osmnx>=2.1.0",
  "pyyaml>=6.0.3",
  "torch>=2.9.1",
  "torchvision>=0.24.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes (undefined names, etc.)
  "W",   # pycodestyle warnings
  "I",   # isort (import order)
  "UP",  # pyupgrade
  "B",   # flake8-bugbear (common pitfalls)
  "SIM", # flake8-simplify
  "C4",  # flake8-comprehensions
  "N",   # pep8-naming
  "RUF", # Ruff-specific rules
]

ignore = ["E501"]
unfixable = [
    "F401",
    "F841",
]

# Good for generated/package boilerplate and tests
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]    # allow re-export imports
"tests/**/*.py" = ["N802", "N803", "N806"]  # often useful in scientific tests (X, Y, etc.)
# If notebook linting is enabled and too noisy, you can add:
# "*.ipynb" = ["E402"]
